--- a/public/public/Qubico.html
+++ b/public/public/Qubico.html
@@ -391,18 +391,18 @@
     </div>
 </section>
 
-<div id="footer" style="background-color: #39c;;height: 45px;">
+<div id="footer" style="background-color: #f3f3f3;height: 45px;">
     <div class="container">
         <div class="row">
             <div class="large-6 columns">
                 <ul class="inline-list" style="margin-left: 300px;">
-                    <li style="float: left;"><a href="/contact/" style="font-size: 14px;margin-left: 20px;color: white;font-weight: 100;">About</a></li><li class="divider"></li><li></li>
-                    <li style="float: left;"><a href="/press/" style="font-size: 14px;margin-left: 20px;color: white;font-weight: 100;">Careers</a></li><li class="divider"></li><li></li>
-                    <li style="float: left;"><a href="/newsletter-signup/" style="font-size: 14px;margin-left: 20px;color: white;font-weight: 100;">Contact</a></li><li class="divider"></li><li></li>
-                    <li style="float: left;"><a href="http://support.unifiedsocial.com" style="font-size: 14px;margin-left: 20px;color: white;font-weight: 100;">Jobs</a></li><li class="divider"></li><li></li>
-                    <li style="float: left;"><a href="/careers/" style="font-size: 14px;margin-left: 20px;color: white;font-weight: 100;">Press</a></li><li class="divider"></li><li></li>
-                    <li style="float: left;"><a href="/sitemap/" style="font-size: 14px;margin-left: 20px;color: white;font-weight: 100;">Sitemap</a></li><li class="divider"></li><li></li>
-                    <li style="float: left;"><a href="/sitemap/" style="font-size: 14px;margin-left: 20px;color: white;font-weight: 100;">Social links</a></li>
+                    <li style="float: left;"><a href="/contact/" style="font-size: 14px;margin-left: 20px;font-weight: 600;">About</a></li><li class="divider"></li><li></li>
+                    <li style="float: left;"><a href="/press/" style="font-size: 14px;margin-left: 20px;font-weight: 600;">Careers</a></li><li class="divider"></li><li></li>
+                    <li style="float: left;"><a href="/newsletter-signup/" style="font-size: 14px;margin-left: 20px;font-weight: 600;">Contact</a></li><li class="divider"></li><li></li>
+                    <li style="float: left;"><a href="http://support.unifiedsocial.com" style="font-size: 14px;margin-left: 20px;font-weight: 600;">Jobs</a></li><li class="divider"></li><li></li>
+                    <li style="float: left;"><a href="/careers/" style="font-size: 14px;margin-left: 20px;font-weight: 600;">Press</a></li><li class="divider"></li><li></li>
+                    <li style="float: left;"><a href="/sitemap/" style="font-size: 14px;margin-left: 20px;font-weight: 600;">Sitemap</a></li><li class="divider"></li><li></li>
+                    <li style="float: left;"><a href="/sitemap/" style="font-size: 14px;margin-left: 20px;font-weight: 600;">Social links</a></li>
                 </ul>
             </div>
         </div>
