--- a/public/public/Qubico.html
+++ b/public/public/Qubico.html
@@ -163,31 +163,31 @@
                 <!--</li>-->
                 <li class="dropdown">
                     <a href="http://demos.q-themes.net/qubico/#about" class="scrollto">Solutions</a>
-                    <ul class="dropdown-menu" style="background-color: #39c;">
-                        <li><a href="#menu11" style="color: white;">Insights and Tracking</a></li>
-                        <li><a href="#menu12" style="color: white;">Community and Content</a></li>
-                        <li><a href="#menu13" style="color: white;">Service and Sales</a></li>
-                        <li><a href="#menu14" style="color: white;">Crisis Management</a></li>
-                        <li><a href="#menu15" style="color: white;">Product Launch</a></li>
-                        <li><a href="#menu16" style="color: white;">Influencer Media</a></li>
+                    <ul class="dropdown-menu" style="background-color: #39c;border:none;box-shadow: 0 0px 0px;padding: 15px 0;">
+                        <li><a href="#menu11" style="font-size: smaller;">Insights and Tracking</a></li>
+                        <li><a href="#menu12" style="font-size: smaller;">Community and Content</a></li>
+                        <li><a href="#menu13" style="font-size: smaller;">Service and Sales</a></li>
+                        <li><a href="#menu14" style="font-size: smaller;">Crisis Management</a></li>
+                        <li><a href="#menu15" style="font-size: smaller;">Product Launch</a></li>
+                        <li><a href="#menu16" style="font-size: smaller;">Influencer Media</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="http://demos.q-themes.net/qubico/#services" class="scrollto">Products</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#menu21" style="color: #39c;">Listen - Monitoring with Auto Reporting</a></li>
-                        <li><a href="#menu22" style="color: #39c;">Engage - Community and Content Management</a></li>
-                        <li><a href="#menu23" style="color: #39c;">Respond - Rapid Response and Workflow</a></li>
-                        <li><a href="#menu24" style="color: #39c;">Crisis – Alert Scheduling</a></li>
-                        <li><a href="#menu25" style="color: #39c;">Influence – Influencer Activation</a></li>
+                    <ul class="dropdown-menu" style="background-color: #39c;border:none;box-shadow: 0 0px 0px;padding: 15px 0;">
+                        <li><a href="#menu21" style="font-size: smaller;">Listen - Monitoring with Auto Reporting</a></li>
+                        <li><a href="#menu22" style="font-size: smaller;">Engage - Community and Content Management</a></li>
+                        <li><a href="#menu23" style="font-size: smaller;">Respond - Rapid Response and Workflow</a></li>
+                        <li><a href="#menu24" style="font-size: smaller;">Crisis - Alert Scheduling</a></li>
+                        <li><a href="#menu25" style="font-size: smaller;">Influence - Influencer Activation</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="http://demos.q-themes.net/qubico/#team" class="scrollto">Resources</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#menu31" style="color: #39c;">Case Studies</a></li>
-                        <li><a href="#menu32" style="color: #39c;">White Papers</a></li>
-                        <li><a href="#menu33" style="color: #39c;">Press Releases</a></li>
+                    <ul class="dropdown-menu" style="background-color: #39c;border:none;box-shadow: 0 0px 0px;padding: 15px 0;">
+                        <li><a href="#menu31" style="font-size: smaller;">Case Studies</a></li>
+                        <li><a href="#menu32" style="font-size: smaller;">White Papers</a></li>
+                        <li><a href="#menu33" style="font-size: smaller;">Press Releases</a></li>
                     </ul>
                 </li>
                 <li class="">
