--- a/public/public/Qubico.html
+++ b/public/public/Qubico.html
@@ -213,8 +213,8 @@
                             real-time business insights and the ability to change conversations that matter most to your
                             business.</p>
                         <p class="in-from-bottom fast delay2">
-                            <button class="btn btn-primary btn-default" onclick="signup()" style="background-color: #39c;">Get Started</button>
-                            <a class="btn btn-primary btn-default" role="button" href="http://alpha.actsocial.com/" target="_blank"  style="background-color: #39c;">Learn more</a>
+                            <button class="btn btn-primary btn-lg" onclick="signup()" style="background-color: #39c;">Get Started</button>
+                            <a class="btn btn-primary btn-lg" role="button" href="http://alpha.actsocial.com/" target="_blank"  style="background-color: #39c;">Learn more</a>
                         </p>
                     </div>
                     <div class="slide1-img in-from-right slow delay1" style="top:80px;">
@@ -467,8 +467,8 @@
 <div class="modal" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content" style="margin-top: 10%;">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <div class="modal-header" style="background-color: #39c;color: white;">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color: white;opacity: 1;">&times;</button>
                 <h4 class="modal-title">Sign Up</h4>
             </div>
             <div class="modal-body"></div>
