--- a/public/public/Qubico.html
+++ b/public/public/Qubico.html
@@ -208,8 +208,8 @@
             <ul class="sequence-canvas container">
                 <li class="animate-out" style="display: list-item; opacity: 1; z-index: 1;">
                     <div class="message-slide1" style="margin-top: -100px;width: 50%;">
-                        <h2 class="title in-from-left fast" style="font-size: 56px;">Insight to Influence</h2>
-                        <p class="in-from-bottom fast delay2">The world’s first influencer network providing both
+                        <h2 class="title in-from-left fast" style="font-size: 50px;">Insight to Influence</h2>
+                        <p class="in-from-bottom fast delay2" style="font-size: 20px;">The world’s first influencer network providing both
                             real-time business insights and the ability to change conversations that matter most to your
                             business.</p>
                         <p class="in-from-bottom fast delay2">
@@ -230,28 +230,28 @@
     <div class="container">
         <div class="row services">
             <div class="col-sm-3 item text-center scrollimation fade-right d2 in" style="padding-top: 50px;">
-                <div class="icon"><i class="fa fa-flag"></i></div>
+                <div class="icon" style="cursor: pointer;"><i class="fa fa-flag"></i></div>
                 <h3>Insight</h3>
                 <p>Go beyond social listening with in-depth consumer and market research, and get the richness of traditional studies in a fraction of the time.</p>
                 <p>Track your brand’s Effective Social Media ScoreTM (ESMS), the most important metric for social footprint integrating reach, engagement, sentiment, and purchase intent.
                 </p>
             </div>
             <div class="col-sm-3 item text-center scrollimation fade-right in" style="padding-top: 50px;">
-                <div class="icon"><i class="fa fa-pencil"></i></div>
+                <div class="icon" style="cursor: pointer;"><i class="fa fa-pencil"></i></div>
                 <h3>Engage</h3>
                 <p>Go beyond social listening with in-depth consumer and market research, and get the richness of traditional studies in a fraction of the time.</p>
                 <p>Track your brand’s Effective Social Media ScoreTM (ESMS), the most important metric for social footprint integrating reach, engagement, sentiment, and purchase intent.
                 </p>
             </div>
             <div class="col-sm-3 item text-center scrollimation fade-left in" style="padding-top: 50px;">
-                <div class="icon"><i class="fa fa-code"></i></div>
+                <div class="icon" style="cursor: pointer;"><i class="fa fa-code"></i></div>
                 <h3>Alert</h3>
                 <p>Go beyond social listening with in-depth consumer and market research, and get the richness of traditional studies in a fraction of the time.</p>
                 <p>Track your brand’s Effective Social Media ScoreTM (ESMS), the most important metric for social footprint integrating reach, engagement, sentiment, and purchase intent.
                 </p>
             </div>
             <div class="col-sm-3 item text-center scrollimation fade-left d2 in" style="padding-top: 50px;">
-                <div class="icon"><i class="fa fa-rocket"></i></div>
+                <div class="icon" style="cursor: pointer;"><i class="fa fa-rocket"></i></div>
                 <h3>Influence</h3>
                 <p>Go beyond social listening with in-depth consumer and market research, and get the richness of traditional studies in a fraction of the time.</p>
                 <p>Track your brand’s Effective Social Media ScoreTM (ESMS), the most important metric for social footprint integrating reach, engagement, sentiment, and purchase intent.
@@ -315,7 +315,7 @@
 <section id="portfolio" class="gray-bg padding-top-bottom" style="height: 200px;">
     <div class="container">
         <div id="carousel-example-captions" class="carousel slide" data-ride="carousel" style="margin-top: 50px;">
-            <div class="carousel-inner">
+            <div class="carousel-inner" style="margin-left: 170px;width: 800px;height: 120px;">
                 <div class="item active">
                     <div class="col-md-9 cta-message" style="width: 100%;">
                         <p>
@@ -363,6 +363,14 @@
                     </div>
                 </div>
             </div>
+
+            <a class="left carousel-control" href="#carousel-example-captions" data-slide="prev" style="background-image:linear-gradient(to right,rgba(0,0,0,0) 0,rgba(0,0,0,.0001) 100%);">
+                <i class="fa fa-angle-left fa-fw" style="margin-top: 20px;font-size: 50px;"></i>
+            </a>
+            <a class="right carousel-control" href="#carousel-example-captions" data-slide="next" style="background-image:linear-gradient(to right,rgba(0,0,0,0) 0,rgba(0,0,0,.0001) 100%);">
+                <i class="fa fa-angle-right fa-fw" style="margin-top: 20px;font-size: 50px;"></i>
+            </a>
+
         </div>
     </div>
 </section>
