--- a/public/public/Qubico.html
+++ b/public/public/Qubico.html
@@ -266,45 +266,45 @@
         <h1 class="section-title">Our Clients</h1>
         <p class="section-description">The world’s biggest brands depend on ActSocial</p>
         <div class="row clients">
-            <div class="col-sm-6 col-md-2">
+            <div class="">
                 <div class="client scrollimation fade-up in">
                     <a href="http://demos.q-themes.net/qubico/#link" target="_blank">
-                        <img class="img-responsive img-center" src="./Qubico_files/google-logo.jpg" alt="">
+                        <img class="img-responsive img-center" src="./ashley-logo.png" alt="">
                     </a>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-2">
+            <div class="">
                 <div class="client scrollimation fade-up d1 in">
                     <a href="http://demos.q-themes.net/qubico/#link" target="_blank">
-                        <img class="img-responsive img-center" src="./Qubico_files/microsoft-logo.jpg" alt="">
+                        <img class="img-responsive img-center" src="./diageo1-logo.png" alt="">
                     </a>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-2">
+            <div class="">
                 <div class="client scrollimation fade-up d3 in">
                     <a href="http://demos.q-themes.net/qubico/#link" target="_blank">
-                        <img class="img-responsive img-center" src="./Qubico_files/msn-logo.jpg" alt="">
+                        <img class="img-responsive img-center" src="./dsm-logo.png" alt="">
                     </a>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-2">
+            <div class="">
                 <div class="client scrollimation fade-up d2 in">
                     <a href="http://demos.q-themes.net/qubico/#link" target="_blank">
-                        <img class="img-responsive img-center" src="./Qubico_files/lenovo-logo.jpg" alt="">
+                        <img class="img-responsive img-center" src="./starbucks-logo.png" alt="">
                     </a>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-2">
+            <div class="">
                 <div class="client scrollimation fade-up d3 in">
                     <a href="http://demos.q-themes.net/qubico/#link" target="_blank">
-                        <img class="img-responsive img-center" src="./Qubico_files/msn-logo.jpg" alt="">
+                        <img class="img-responsive img-center" src="./barilla-logo.png" alt="">
                     </a>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-2">
+            <div class="">
                 <div class="client scrollimation fade-up d2 in">
                     <a href="http://demos.q-themes.net/qubico/#link" target="_blank">
-                        <img class="img-responsive img-center" src="./Qubico_files/lenovo-logo.jpg" alt="">
+                        <img class="img-responsive img-center" src="./omg-logo.png" alt="">
                     </a>
                 </div>
             </div>
