--- a/public/public/Qubico.html
+++ b/public/public/Qubico.html
@@ -304,7 +304,7 @@
             <div class="">
                 <div class="client scrollimation fade-up d2 in">
                     <a href="http://demos.q-themes.net/qubico/#link" target="_blank">
-                        <img class="img-responsive img-center" src="./OMG-logo.png" alt="">
+                        <img class="img-responsive img-center" src="./omg-logo.png" alt="">
                     </a>
                 </div>
             </div>
