--- a/public/public/Qubico.html
+++ b/public/public/Qubico.html
@@ -163,7 +163,7 @@
                 <!--</li>-->
                 <li class="dropdown">
                     <a href="http://demos.q-themes.net/qubico/#about" class="scrollto">Solutions</a>
-                    <ul class="dropdown-menu" style="background-color: #39c;border:none;box-shadow: 0 0px 0px;padding: 15px 0;">
+                    <ul class="dropdown-menu" style="background-color: #39c;border:1px solid #ddd;box-shadow: 0 0px 0px;">
                         <li><a href="#menu11" style="font-size: smaller;">Insights and Tracking</a></li>
                         <li><a href="#menu12" style="font-size: smaller;">Community and Content</a></li>
                         <li><a href="#menu13" style="font-size: smaller;">Service and Sales</a></li>
@@ -174,7 +174,7 @@
                 </li>
                 <li class="dropdown">
                     <a href="http://demos.q-themes.net/qubico/#services" class="scrollto">Products</a>
-                    <ul class="dropdown-menu" style="background-color: #39c;border:none;box-shadow: 0 0px 0px;padding: 15px 0;">
+                    <ul class="dropdown-menu" style="background-color: #39c;border:1px solid #ddd;box-shadow: 0 0px 0px;">
                         <li><a href="#menu21" style="font-size: smaller;">Listen - Monitoring with Auto Reporting</a></li>
                         <li><a href="#menu22" style="font-size: smaller;">Engage - Community and Content Management</a></li>
                         <li><a href="#menu23" style="font-size: smaller;">Respond - Rapid Response and Workflow</a></li>
@@ -184,7 +184,7 @@
                 </li>
                 <li class="dropdown">
                     <a href="http://demos.q-themes.net/qubico/#team" class="scrollto">Resources</a>
-                    <ul class="dropdown-menu" style="background-color: #39c;border:none;box-shadow: 0 0px 0px;padding: 15px 0;">
+                    <ul class="dropdown-menu" style="background-color: #39c;border:1px solid #ddd;box-shadow: 0 0px 0px;">
                         <li><a href="#menu31" style="font-size: smaller;">Case Studies</a></li>
                         <li><a href="#menu32" style="font-size: smaller;">White Papers</a></li>
                         <li><a href="#menu33" style="font-size: smaller;">Press Releases</a></li>
@@ -262,7 +262,7 @@
 </section>
 
 <section id="clients" class="white-bg padding-top-bottom">
-    <div class="container">
+    <div class="container" style="margin-top: 20px;">
         <h1 class="section-title">Our Clients</h1>
         <p class="section-description">The world’s biggest brands depend on ActSocial</p>
         <div class="row clients">
@@ -389,10 +389,8 @@
                 </div>
             </div>
             <div class="col-sm-5 col-sm-offset-1">
-                <h2>Sign Up for a Live Demo</h2>
+                <h2 style="margin-top: 20px;">Sign Up for a Live Demo</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in varius erat.</p>
-                <p>Nam id felis eu felis consequat adipiscing. Suspendisse sit amet faucibus nunc, dignissim vehicula
-                    enim. Vestibulum luctus turpis sit amet varius venenatis.</p>
                 <a class="btn btn-qubico white" onclick="signup()">Get Started</a>
             </div>
         </div>
@@ -404,13 +402,13 @@
         <div class="row">
             <div class="large-6 columns">
                 <ul class="inline-list" style="margin-left: 300px;">
-                    <li style="float: left;"><a href="/contact/" style="font-size: 14px;margin-left: 20px;font-weight: 600;">About</a></li><li class="divider"></li><li></li>
-                    <li style="float: left;"><a href="/press/" style="font-size: 14px;margin-left: 20px;font-weight: 600;">Careers</a></li><li class="divider"></li><li></li>
-                    <li style="float: left;"><a href="/newsletter-signup/" style="font-size: 14px;margin-left: 20px;font-weight: 600;">Contact</a></li><li class="divider"></li><li></li>
-                    <li style="float: left;"><a href="http://support.unifiedsocial.com" style="font-size: 14px;margin-left: 20px;font-weight: 600;">Jobs</a></li><li class="divider"></li><li></li>
-                    <li style="float: left;"><a href="/careers/" style="font-size: 14px;margin-left: 20px;font-weight: 600;">Press</a></li><li class="divider"></li><li></li>
-                    <li style="float: left;"><a href="/sitemap/" style="font-size: 14px;margin-left: 20px;font-weight: 600;">Sitemap</a></li><li class="divider"></li><li></li>
-                    <li style="float: left;"><a href="/sitemap/" style="font-size: 14px;margin-left: 20px;font-weight: 600;">Social links</a></li>
+                    <li style="float: left;"><a href="/contact/" style="font-size: 14px;margin-left: 20px;font-weight: 600;text-decoration: none;">About</a></li><li class="divider"></li><li></li>
+                    <li style="float: left;"><a href="/press/" style="font-size: 14px;margin-left: 20px;font-weight: 600;text-decoration: none;">Careers</a></li><li class="divider"></li><li></li>
+                    <li style="float: left;"><a href="/newsletter-signup/" style="font-size: 14px;margin-left: 20px;font-weight: 600;text-decoration: none;">Contact</a></li><li class="divider"></li><li></li>
+                    <li style="float: left;"><a href="http://support.unifiedsocial.com" style="font-size: 14px;margin-left: 20px;font-weight: 600;text-decoration: none;">Jobs</a></li><li class="divider"></li><li></li>
+                    <li style="float: left;"><a href="/careers/" style="font-size: 14px;margin-left: 20px;font-weight: 600;text-decoration: none;">Press</a></li><li class="divider"></li><li></li>
+                    <li style="float: left;"><a href="/sitemap/" style="font-size: 14px;margin-left: 20px;font-weight: 600;text-decoration: none;">Sitemap</a></li><li class="divider"></li><li></li>
+                    <li style="float: left;"><a href="/sitemap/" style="font-size: 14px;margin-left: 20px;font-weight: 600;text-decoration: none;">Social links</a></li>
                 </ul>
             </div>
         </div>
@@ -501,57 +499,57 @@
         show_table.append(
         '<form class="form-horizontal" role="form">' +
                 '<div class="form-group">'+
-                    '<label for="inputEmail3" class="col-sm-4 control-label">Company Email</label>'+
-                    '<div class="col-sm-8">'+
+                    '<label for="inputEmail3" class="col-sm-3 control-label">Company Email</label>'+
+                    '<div class="col-sm-9">'+
                         '<input type="email" class="form-control" id="inputEmail3" placeholder="Email">'+
                     '</div>'+
                 '</div>'+
 
                 '<div class="form-group">'+
-                    '<label for="inputPassword3" class="col-sm-4 control-label">Password</label>'+
-                    '<div class="col-sm-8">'+
+                    '<label for="inputPassword3" class="col-sm-3 control-label">Password</label>'+
+                    '<div class="col-sm-9">'+
                         '<input type="password" class="form-control" id="inputPassword3" placeholder="Password">'+
                     '</div>'+
                 '</div>'+
 
                 '<div class="form-group">'+
-                    '<label for="inputPassword3" class="col-sm-4 control-label">Confirm Password</label>'+
-                    '<div class="col-sm-8">'+
+                    '<label for="inputPassword3" class="col-sm-3 control-label">Confirm Password</label>'+
+                    '<div class="col-sm-9">'+
                         '<input type="password" class="form-control" id="inputPassword3" placeholder="Confirm Password">'+
                     '</div>'+
                 '</div>'+
 
                 '<div class="form-group">'+
-                    '<label for="inputEmail3" class="col-sm-4 control-label">First Name</label>'+
-                    '<div class="col-sm-8">'+
+                    '<label for="inputEmail3" class="col-sm-3 control-label">First Name</label>'+
+                    '<div class="col-sm-9">'+
                         '<input type="text" class="form-control" id="inputEmail3" placeholder="First Name">'+
                     '</div>'+
                 '</div>'+
 
                 '<div class="form-group">'+
-                    '<label for="inputEmail3" class="col-sm-4 control-label">Last Name</label>'+
-                    '<div class="col-sm-8">'+
+                    '<label for="inputEmail3" class="col-sm-3 control-label">Last Name</label>'+
+                    '<div class="col-sm-9">'+
                         '<input type="text" class="form-control" id="inputEmail3" placeholder="Last Name">'+
                     '</div>'+
                 '</div>'+
 
                 '<div class="form-group">'+
-                    '<label for="inputEmail3" class="col-sm-4 control-label">Company</label>'+
-                    '<div class="col-sm-8">'+
+                    '<label for="inputEmail3" class="col-sm-3 control-label">Company</label>'+
+                    '<div class="col-sm-9">'+
                         '<input type="text" class="form-control" id="inputEmail3" placeholder="Company">'+
                     '</div>'+
                 '</div>'+
 
                 '<div class="form-group">'+
-                    '<label for="inputEmail3" class="col-sm-4 control-label">Job Title</label>'+
-                    '<div class="col-sm-8">'+
+                    '<label for="inputEmail3" class="col-sm-3 control-label">Job Title</label>'+
+                    '<div class="col-sm-9">'+
                         '<input type="text" class="form-control" id="inputEmail3" placeholder="Job Title">'+
                     '</div>'+
                 '</div>'+
 
                 '<div class="form-group">'+
-                    '<label for="inputEmail3" class="col-sm-4 control-label">Phone</label>'+
-                    '<div class="col-sm-8">'+
+                    '<label for="inputEmail3" class="col-sm-3 control-label">Phone</label>'+
+                    '<div class="col-sm-9">'+
                         '<input type="text" class="form-control" id="inputEmail3" placeholder="Phone">'+
                     '</div>'+
                 '</div>'+
