--- a/public/public/product.html
+++ b/public/public/product.html
@@ -177,9 +177,8 @@
                     <ul class="dropdown-menu" style="background-color: #39c;border:1px solid #ddd;box-shadow: 0 0px 0px;">
                         <li><a href="#menu21" style="font-size: smaller;">Listen - Monitoring with Auto Reporting</a></li>
                         <li><a href="#menu22" style="font-size: smaller;">Engage - Community and Content Management</a></li>
-                        <li><a href="#menu23" style="font-size: smaller;">Respond - Rapid Response and Workflow</a></li>
-                        <li><a href="#menu24" style="font-size: smaller;">Crisis - Alert Scheduling</a></li>
-                        <li><a href="#menu25" style="font-size: smaller;">Influence - Influencer Activation</a></li>
+                        <li><a href="#menu23" style="font-size: smaller;">Crisis - Alert Scheduling</a></li>
+                        <li><a href="#menu24" style="font-size: smaller;">Influence - Influencer Activation</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
@@ -228,7 +227,7 @@
 </header>
 
 <!--111111-->
-<section class="gray-bg padding-top" style="padding: 50px;">
+<section id="insight" class="gray-bg padding-top" style="padding: 50px;">
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
@@ -248,7 +247,7 @@
 </section>
 
 <!--22222-->
-<section class="white-bg padding-top" style="padding: 50px;">
+<section id="engage" class="white-bg padding-top" style="padding: 50px;">
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
@@ -268,7 +267,7 @@
 </section>
 
 <!--33333-->
-<section class="gray-bg padding-top" style="padding: 50px;">
+<section id="crisis" class="gray-bg padding-top" style="padding: 50px;">
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
@@ -279,7 +278,7 @@
                 </div>
             </div>
             <div class="col-sm-5 col-sm-offset-1">
-                <h2 style="margin-top: 20px;">Alert</h2>
+                <h2 style="margin-top: 20px;">Crisis</h2>
                 <p>Go beyond social listening with in-depth consumer and market research, and get the richness of traditional studies in a fraction of the time.  Track your brand’s Effective Social Media ScoreTM (ESMS), the most important metric for social footprint integrating reach, engagement, sentiment, and purchase intent. </p>
                 <!--<a class="btn btn-qubico white" onclick="signup()">Get Started</a>-->
             </div>
@@ -288,7 +287,7 @@
 </section>
 
 <!--44444-->
-<section class="white-bg padding-top" style="padding: 50px;">
+<section id="influence" class="white-bg padding-top" style="padding: 50px;">
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
