--- a/public/public/index.html
+++ b/public/public/index.html
@@ -164,22 +164,21 @@
                 <li class="dropdown">
                     <a href="http://demos.q-themes.net/qubico/#about" class="scrollto">Solutions</a>
                     <ul class="dropdown-menu" style="background-color: #39c;border:1px solid #ddd;box-shadow: 0 0px 0px;">
-                        <li><a href="#menu11" style="font-size: smaller;">Insights and Tracking</a></li>
-                        <li><a href="#menu12" style="font-size: smaller;">Community and Content</a></li>
-                        <li><a href="#menu13" style="font-size: smaller;">Service and Sales</a></li>
-                        <li><a href="#menu14" style="font-size: smaller;">Crisis Management</a></li>
-                        <li><a href="#menu15" style="font-size: smaller;">Product Launch</a></li>
-                        <li><a href="#menu16" style="font-size: smaller;">Influencer Media</a></li>
+                        <li><a href="./solution.html#cami" style="font-size: smaller;">Insights and Tracking</a></li>
+                        <li><a href="./solution.html#cac" style="font-size: smaller;">Community and Content</a></li>
+                        <li><a href="./solution.html#sas" style="font-size: smaller;">Service and Sales</a></li>
+                        <li><a href="./solution.html#cm" style="font-size: smaller;">Crisis Management</a></li>
+                        <li><a href="./solution.html#npl" style="font-size: smaller;">Product Launch</a></li>
+                        <li><a href="./solution.html#im" style="font-size: smaller;">Influencer Media</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="http://demos.q-themes.net/qubico/#services" class="scrollto">Products</a>
                     <ul class="dropdown-menu" style="background-color: #39c;border:1px solid #ddd;box-shadow: 0 0px 0px;">
-                        <li><a href="#menu21" style="font-size: smaller;">Listen - Monitoring with Auto Reporting</a></li>
-                        <li><a href="#menu22" style="font-size: smaller;">Engage - Community and Content Management</a></li>
-                        <li><a href="#menu23" style="font-size: smaller;">Respond - Rapid Response and Workflow</a></li>
-                        <li><a href="#menu24" style="font-size: smaller;">Crisis - Alert Scheduling</a></li>
-                        <li><a href="#menu25" style="font-size: smaller;">Influence - Influencer Activation</a></li>
+                        <li><a href="./product.html#insight" style="font-size: smaller;">Listen - Monitoring with Auto Reporting</a></li>
+                        <li><a href="./product.html#engage" style="font-size: smaller;">Engage - Community and Content Management</a></li>
+                        <li><a href="./product.html#crisis" style="font-size: smaller;">Crisis - Alert Scheduling</a></li>
+                        <li><a href="./product.html#influence" style="font-size: smaller;">Influence - Influencer Activation</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
@@ -245,7 +244,7 @@
             </div>
             <div class="col-sm-3 item text-center scrollimation fade-left in" style="padding-top: 50px;">
                 <div class="icon" style="cursor: pointer;"><i class="fa fa-code"></i></div>
-                <h3>Alert</h3>
+                <h3>Crisis</h3>
                 <p>Go beyond social listening with in-depth consumer and market research, and get the richness of traditional studies in a fraction of the time.</p>
                 <p>Track your brand’s Effective Social Media ScoreTM (ESMS), the most important metric for social footprint integrating reach, engagement, sentiment, and purchase intent.
                 </p>
