--- a/public/public/solution.html
+++ b/public/public/solution.html
@@ -177,9 +177,8 @@
                     <ul class="dropdown-menu" style="background-color: #39c;border:1px solid #ddd;box-shadow: 0 0px 0px;">
                         <li><a href="#menu21" style="font-size: smaller;">Listen - Monitoring with Auto Reporting</a></li>
                         <li><a href="#menu22" style="font-size: smaller;">Engage - Community and Content Management</a></li>
-                        <li><a href="#menu23" style="font-size: smaller;">Respond - Rapid Response and Workflow</a></li>
-                        <li><a href="#menu24" style="font-size: smaller;">Crisis - Alert Scheduling</a></li>
-                        <li><a href="#menu25" style="font-size: smaller;">Influence - Influencer Activation</a></li>
+                        <li><a href="#menu23" style="font-size: smaller;">Crisis - Alert Scheduling</a></li>
+                        <li><a href="#menu24" style="font-size: smaller;">Influence - Influencer Activation</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
@@ -202,6 +201,7 @@
     </div>
 </div>
 
+<!--header-->
 <header id="home" class="">
     <div id="sequence-theme" style="height: 450px">
         <div id="sequence" style="opacity: 1;height: 450px">
@@ -218,7 +218,7 @@
                         </p>
                     </div>
                     <div class="slide1-img in-from-right slow delay1" style="top:80px;">
-                        <img class="img-responsive" src="./banner1.png" alt="" style="height: 350px;margin-left:40px;">
+                        <img class="img-responsive" src="./banner1.png" alt="" style="height: 350px;margin-left:70px;">
                     </div>
                 </li>
             </ul>
@@ -226,177 +226,127 @@
     </div>
 </header>
 
-<section id="services" class="white-bg padding-top-bottom" style="background-color: #f3f3f3;">
-    <div class="container">
-        <div class="row services">
-            <div class="col-sm-3 item text-center scrollimation fade-right d2 in" style="padding-top: 50px;">
-                <div class="icon" style="cursor: pointer;"><i class="fa fa-flag"></i></div>
-                <h3>Insight</h3>
-                <p>Go beyond social listening with in-depth consumer and market research, and get the richness of traditional studies in a fraction of the time.</p>
-                <p>Track your brand’s Effective Social Media ScoreTM (ESMS), the most important metric for social footprint integrating reach, engagement, sentiment, and purchase intent.
-                </p>
-            </div>
-            <div class="col-sm-3 item text-center scrollimation fade-right in" style="padding-top: 50px;">
-                <div class="icon" style="cursor: pointer;"><i class="fa fa-pencil"></i></div>
-                <h3>Engage</h3>
-                <p>Go beyond social listening with in-depth consumer and market research, and get the richness of traditional studies in a fraction of the time.</p>
-                <p>Track your brand’s Effective Social Media ScoreTM (ESMS), the most important metric for social footprint integrating reach, engagement, sentiment, and purchase intent.
-                </p>
-            </div>
-            <div class="col-sm-3 item text-center scrollimation fade-left in" style="padding-top: 50px;">
-                <div class="icon" style="cursor: pointer;"><i class="fa fa-code"></i></div>
-                <h3>Alert</h3>
-                <p>Go beyond social listening with in-depth consumer and market research, and get the richness of traditional studies in a fraction of the time.</p>
-                <p>Track your brand’s Effective Social Media ScoreTM (ESMS), the most important metric for social footprint integrating reach, engagement, sentiment, and purchase intent.
-                </p>
-            </div>
-            <div class="col-sm-3 item text-center scrollimation fade-left d2 in" style="padding-top: 50px;">
-                <div class="icon" style="cursor: pointer;"><i class="fa fa-rocket"></i></div>
-                <h3>Influence</h3>
-                <p>Go beyond social listening with in-depth consumer and market research, and get the richness of traditional studies in a fraction of the time.</p>
-                <p>Track your brand’s Effective Social Media ScoreTM (ESMS), the most important metric for social footprint integrating reach, engagement, sentiment, and purchase intent.
-                </p>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section id="clients" class="white-bg padding-top-bottom">
-    <div class="container" style="margin-top: 20px;">
-        <h1 class="section-title">Our Clients</h1>
-        <p class="section-description">The world’s biggest brands depend on ActSocial</p>
-        <div class="row clients">
-            <div class="">
-                <div class="client scrollimation fade-up in">
-                    <a href="http://demos.q-themes.net/qubico/#link" target="_blank">
-                        <img class="img-responsive img-center" src="./ashley-logo.png" alt="">
-                    </a>
-                </div>
-            </div>
-            <div class="">
-                <div class="client scrollimation fade-up d1 in">
-                    <a href="http://demos.q-themes.net/qubico/#link" target="_blank">
-                        <img class="img-responsive img-center" src="./diageo1-logo.png" alt="">
-                    </a>
-                </div>
-            </div>
-            <div class="">
-                <div class="client scrollimation fade-up d3 in">
-                    <a href="http://demos.q-themes.net/qubico/#link" target="_blank">
-                        <img class="img-responsive img-center" src="./dsm-logo.png" alt="">
-                    </a>
-                </div>
-            </div>
-            <div class="">
-                <div class="client scrollimation fade-up d2 in">
-                    <a href="http://demos.q-themes.net/qubico/#link" target="_blank">
-                        <img class="img-responsive img-center" src="./starbucks-logo.png" alt="">
-                    </a>
-                </div>
-            </div>
-            <div class="">
-                <div class="client scrollimation fade-up d3 in">
-                    <a href="http://demos.q-themes.net/qubico/#link" target="_blank">
-                        <img class="img-responsive img-center" src="./barilla-logo.png" alt="">
-                    </a>
-                </div>
-            </div>
-            <div class="">
-                <div class="client scrollimation fade-up d2 in">
-                    <a href="http://demos.q-themes.net/qubico/#link" target="_blank">
-                        <img class="img-responsive img-center" src="./omg-logo.png" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section id="portfolio" class="gray-bg padding-top-bottom" style="height: 200px;">
-    <div class="container">
-        <div id="carousel-example-captions" class="carousel slide" data-ride="carousel" style="margin-top: 50px;">
-            <div class="carousel-inner" style="margin-left: 170px;width: 800px;height: 120px;">
-                <div class="item active">
-                    <div class="col-md-9 cta-message" style="width: 100%;">
-                        <p>
-                            <strong>“ActSocial not only made sure our message was on target, but delivered reach and
-                                education less than a month after we started using the ActSocial platform.”</strong>
-                        </p>
-                        <p style="float: right;">
-                            Rosa Li, Sr Brand Manager, Kraft Foods, China
-                        </p>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div class="col-md-9 cta-message" style="width: 100%;">
-                        <p>
-                            <strong>“Our client’s feedback has been glowing about ActSocial. ActSocial delivered in a
-                                very short space of time.”</strong>
-                        </p>
-                        <p style="float: right;">
-                            Beth Wallach, Social Media Director, Leo Burnett
-                        </p>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div class="col-md-9 cta-message" style="width: 100%;">
-                        <p>
-                            <strong>“We are very excited after our results with ActSocial: recruitment and engagement
-                                through our influencers.”</strong>
-                        </p>
-                        <p style="float: right;">
-                            Jamie Silva, Marketing Manager for Loyalty, Starbucks Philippines
-                        </p>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div class="col-md-9 cta-message" style="width: 100%;">
-                        <p>
-                            <strong>“ActSocial not only made sure our message was on target, but delivered reach and
-                                education less than a month after we started using the ActSocial platform.”</strong>
-                        </p>
-                        <p style="float: right;">
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <a class="left carousel-control" href="#carousel-example-captions" data-slide="prev" style="background-image:linear-gradient(to right,rgba(0,0,0,0) 0,rgba(0,0,0,.0001) 100%);">
-                <i class="fa fa-angle-left fa-fw" style="margin-top: 20px;font-size: 50px;"></i>
-            </a>
-            <a class="right carousel-control" href="#carousel-example-captions" data-slide="next" style="background-image:linear-gradient(to right,rgba(0,0,0,0) 0,rgba(0,0,0,.0001) 100%);">
-                <i class="fa fa-angle-right fa-fw" style="margin-top: 20px;font-size: 50px;"></i>
-            </a>
-
-        </div>
-    </div>
-</section>
-
-<section class="color-bg light-typo padding-top-bottom cta-iphones" style="padding: 50px;">
+<!--111111-->
+<section class="gray-bg padding-top" style="padding: 50px;" id="cami">
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
                 <div class="iphones-wrapper scrollimation in">
-                    <div class="iphone-portrait-frame">
-                        <img class="img-responsive" src="./banner3.png" alt="">
-                    </div>
                     <div class="iphone-landscape-frame in">
-                        <img class="img-responsive" src="./banner2.png" alt="">
+                        <img class="img-responsive" src="./banner1.png" alt="">
                     </div>
                 </div>
             </div>
             <div class="col-sm-5 col-sm-offset-1">
-                <h2 style="margin-top: 20px;">Sign Up for a Live Demo</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in varius erat.</p>
-                <a class="btn btn-qubico white" onclick="signup()">Get Started</a>
+                <h2 style="margin-top: 20px;">Consumer and Market Insights</h2>
+                <p>ActSocial’s groundbreaking research model connects big data and influencer media to deliver highly detailed quantitative and qualitative insights faster than ever before. With backgrounds at the worlds biggest research firms, ActSocial’s team provides consumer and market analysis, concept, product, and message testing, and brand tracking. </p>
+                <!--<a class="btn btn-qubico white" onclick="signup()">Get Started</a>-->
             </div>
         </div>
     </div>
 </section>
 
+<!--22222-->
+<section class="white-bg padding-top" style="padding: 50px;" id="cac">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h2 style="margin-top: 20px;">Community and Content</h2>
+                <p>ActSocial’s groundbreaking research model connects big data and influencer media to deliver highly detailed quantitative and qualitative insights faster than ever before. With backgrounds at the worlds biggest research firms, ActSocial’s team provides consumer and market analysis, concept, product, and message testing, and brand tracking. </p>
+                <!--<a class="btn btn-qubico white" onclick="signup()">Get Started</a>-->
+            </div>
+            <div class="col-sm-5 col-sm-offset-1">
+                <div class="iphones-wrapper scrollimation in">
+                    <div class="iphone-landscape-frame in">
+                        <img class="img-responsive" src="./banner1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--33333-->
+<section class="gray-bg padding-top" style="padding: 50px;" id="sas">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="iphones-wrapper scrollimation in">
+                    <div class="iphone-landscape-frame in">
+                        <img class="img-responsive" src="./banner1.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-5 col-sm-offset-1">
+                <h2 style="margin-top: 20px;">Service and Sales</h2>
+                <p>ActSocial’s groundbreaking research model connects big data and influencer media to deliver highly detailed quantitative and qualitative insights faster than ever before. With backgrounds at the worlds biggest research firms, ActSocial’s team provides consumer and market analysis, concept, product, and message testing, and brand tracking. </p>
+                <!--<a class="btn btn-qubico white" onclick="signup()">Get Started</a>-->
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--44444-->
+<section class="white-bg padding-top" style="padding: 50px;" id="cm">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h2 style="margin-top: 20px;">Crisis Management</h2>
+                <p>ActSocial’s groundbreaking research model connects big data and influencer media to deliver highly detailed quantitative and qualitative insights faster than ever before. With backgrounds at the worlds biggest research firms, ActSocial’s team provides consumer and market analysis, concept, product, and message testing, and brand tracking. </p>
+                <!--<a class="btn btn-qubico white" onclick="signup()">Get Started</a>-->
+            </div>
+            <div class="col-sm-5 col-sm-offset-1">
+                <div class="iphones-wrapper scrollimation in">
+                    <div class="iphone-landscape-frame in">
+                        <img class="img-responsive" src="./banner1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--55555-->
+<section class="gray-bg padding-top" style="padding: 50px;" id="npl">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="iphones-wrapper scrollimation in">
+                    <div class="iphone-landscape-frame in">
+                        <img class="img-responsive" src="./banner1.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-5 col-sm-offset-1">
+                <h2 style="margin-top: 20px;">New Product Launch</h2>
+                <p>ActSocial’s groundbreaking research model connects big data and influencer media to deliver highly detailed quantitative and qualitative insights faster than ever before. With backgrounds at the worlds biggest research firms, ActSocial’s team provides consumer and market analysis, concept, product, and message testing, and brand tracking. </p>
+                <!--<a class="btn btn-qubico white" onclick="signup()">Get Started</a>-->
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--66666-->
+<section class="white-bg padding-top" style="padding: 50px;" id="im">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h2 style="margin-top: 20px;">Influencer Media</h2>
+                <p>ActSocial’s groundbreaking research model connects big data and influencer media to deliver highly detailed quantitative and qualitative insights faster than ever before. With backgrounds at the worlds biggest research firms, ActSocial’s team provides consumer and market analysis, concept, product, and message testing, and brand tracking. </p>
+                <!--<a class="btn btn-qubico white" onclick="signup()">Get Started</a>-->
+            </div>
+            <div class="col-sm-5 col-sm-offset-1">
+                <div class="iphones-wrapper scrollimation in">
+                    <div class="iphone-landscape-frame in">
+                        <img class="img-responsive" src="./banner1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--footer-->
 <div id="footer" style="background-color: #f3f3f3;height: 45px;">
     <div class="container">
         <div class="row">
