--- a/public/public/index.html
+++ b/public/public/index.html
@@ -162,7 +162,7 @@
                 <!--<a href="http://demos.q-themes.net/qubico/#home" class="scrollto">Home</a>-->
                 <!--</li>-->
                 <li class="dropdown">
-                    <a href="http://demos.q-themes.net/qubico/#about" class="scrollto">Solutions</a>
+                    <a href="#" class="scrollto">Solutions</a>
                     <ul class="dropdown-menu" style="background-color: #39c;border:1px solid #ddd;box-shadow: 0 0px 0px;">
                         <li><a href="./solution.html#cami" style="font-size: smaller;">Insights and Tracking</a></li>
                         <li><a href="./solution.html#cac" style="font-size: smaller;">Community and Content</a></li>
@@ -173,7 +173,7 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="http://demos.q-themes.net/qubico/#services" class="scrollto">Products</a>
+                    <a href="./index.html#services" class="scrollto">Products</a>
                     <ul class="dropdown-menu" style="background-color: #39c;border:1px solid #ddd;box-shadow: 0 0px 0px;">
                         <li><a href="./product.html#insight" style="font-size: smaller;">Listen - Monitoring with Auto Reporting</a></li>
                         <li><a href="./product.html#engage" style="font-size: smaller;">Engage - Community and Content Management</a></li>
@@ -182,7 +182,7 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="http://demos.q-themes.net/qubico/#team" class="scrollto">Resources</a>
+                    <a href="#" class="scrollto">Resources</a>
                     <ul class="dropdown-menu" style="background-color: #39c;border:1px solid #ddd;box-shadow: 0 0px 0px;">
                         <li><a href="#menu31" style="font-size: smaller;">Case Studies</a></li>
                         <li><a href="#menu32" style="font-size: smaller;">White Papers</a></li>
